syntax = "proto3";


package ts;

service TabouSearchService {
    rpc InitTransaction (InitTransactionRequest) returns (GenericFitnessResponse) {}
    rpc SendFitness (GenericFitnessRequest) returns (GenericFitnessResponse) {}
    rpc StopTransaction (StopRequest) returns (StopResponse) {}
}

import "messages.proto";